# xiaochengjian

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  commitlint.config.cjs  m3-ui.xml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  pages.yml  release.yml  sdk-build.yml
admin-web/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
admin-web/src/: App.vue
admin-web/src/api/: apps.ts  audit.spec.ts  audit.ts  cards.ts  client.spec.ts  client.ts  inject.ts  packer.ts  stats.ts  types.ts
admin-web/src/layouts/: MainLayout.vue
admin-web/src/router/: index.ts
admin-web/src/stores/: auth.spec.ts  auth.ts
admin-web/src/views/: AppDetail.vue  Apps.spec.ts  Apps.vue  Audit.spec.ts  Audit.vue  Dashboard.spec.ts  Dashboard.vue  Inject.vue  Login.spec.ts  Login.vue  Packer.vue  Register.vue  SdkConfig.spec.ts  SdkConfig.vue  SdkGuide.vue  Settings.vue  TwoFactorVerify.vue
backend/: .env.example  .eslintrc.cjs  README.md  package.json  tsconfig.json
backend/assets/defender-sdk/: classes-defender-v1.0.0.dex  xcj-defender-sdk-v1.0.0.aar
backend/prisma/: schema.prisma
backend/prisma/sql/: rls.sql
backend/src/: app.module.ts  main.ts
backend/src/application/: application.controller.spec.ts  application.controller.ts  application.service.spec.ts  application.service.ts
backend/src/audit/: audit.decorator.ts  audit.interceptor.spec.ts  audit.interceptor.ts  audit.service.spec.ts  audit.service.ts
backend/src/audit-own/: audit-log-own.service.spec.ts  audit-log-own.service.ts  audit-own-validators.spec.ts  audit-own-validators.ts  audit-own.controller.spec.ts  audit-own.controller.ts  audit-own.module.ts  audit-own.service.spec.ts  audit-own.service.ts  watermark.controller.spec.ts  watermark.controller.ts  watermark.service.spec.ts  watermark.service.ts
backend/src/auth/: auth.controller.spec.ts  auth.controller.ts  auth.module.ts  auth.service.spec.ts  auth.service.ts  jwt.strategy.spec.ts  jwt.strategy.ts  oauth.controller.ts  oauth.service.ts  totp.service.spec.ts  totp.service.ts
backend/src/card-key/: card-key-generator.spec.ts  card-key-generator.ts  card-key.controller.spec.ts  card-key.controller.ts  card-key.module.ts  card-key.service.spec.ts  (+1 more)
backend/test/: app.e2e-spec.ts  main-flow.e2e-spec.ts
deploy/: .env.example  HTTPS.md  README.md  SAAS-CHECKLIST.md  admin-web.Dockerfile  admin-web.nginx.conf  backend.Dockerfile  docker-compose.dev.yml  docker-compose.yml  saas-deploy.sh
deploy/alertmanager/: alertmanager.yml
deploy/alertmanager-feishu/: Dockerfile  index.js  package.json
deploy/backup/: README.md  backup.env.example  backup.sh  restore-test.sh  restore.sh
deploy/nginx/: nginx-https.conf  nginx.conf
deploy/prometheus/: prometheus.yml  rules.yml
deploy/promtail/: promtail.yml
docs/: _config.yml  architecture.md  cla-setup.md  cla.md  deploy.md  handover.md  index.md  sdk-integration.md  security.md
docs/adr/: 0000-template.md  0001-project-positioning-and-compliance.md  0002-deployment-and-business-model.md  0003-milestone-planning.md  0004-collaboration-and-open-source-governance.md  0005-backend-tech-stack.md  0006-database-postgresql.md  0007-cache-redis.md  0008-admin-vue3-naive-ui.md  0009-sdk-kotlin-rust-jni.md  0010-sdk-distribution.md  0011-injection-smali-dex.md  0012-deployment-compose-k8s.md  0013-card-key-types.md  0014-card-key-format.md  0015-device-binding.md  0016-machine-id-algorithm.md  0017-offline-validation.md  0018-multi-app-multi-tenant.md  0019-security-philosophy.md  0020-communication-encryption.md  0021-request-signing.md  0022-anti-brute-force.md  0023-rust-core-design.md  0024-anti-debug-vm-detection.md  0025-integrity-check.md  0026-offline-cache-encryption.md  0027-server-security-baseline.md  0028-injector-architecture.md  0029-hardened-apk-compatibility.md  0030-anti-abuse.md  0031-saas-deployment.md  0032-monitoring-logging.md  0033-backup-dr.md  0034-cicd-pipeline.md  0035-release-i18n.md  0036-monorepo-structure.md  0037-code-standards.md  0038-testing-strategy.md  0039-documentation-standards.md  (+50 more)
docs/compliance/: audit-eula.md  sdk-privacy-policy.md  user-agreement.md
injector/: README.md  build.gradle.kts  settings.gradle.kts
injector-android/: README.md  settings.gradle.kts
injector-android/app/: build.gradle.kts
injector-android/bangcle-test-app/: README.md  build.gradle.kts
sdk-android/: README.md
sdk-android/defender-demo/: build.gradle.kts  proguard-rules.pro  settings.gradle.kts
sdk-android/defender-sdk/: build.gradle.kts  proguard-rules.pro  settings.gradle.kts
sdk-android/defender-sdk/src/main/cpp/: CMakeLists.txt  anti_debug.c  anti_dump.c  anti_frida.c  custom_linker.c  custom_linker.h  defender_jni.c  defender_response.c  dex_integrity.c  hash_calculator.c  hash_storage.c  inner_defender.c  inner_defender_enc.h  inner_loader.c  integrity.c  mmap_reader.c  patch_env_detect.c  root_check.c  self_integrity.c  self_verify.c  server_gate.c  sig_verify.c  signing_block_parser.c  trigger_scheduler.c  validator_core.c  vm_bytecode.h  vm_engine.c  vm_engine.h
sdk-android/dex/: classes-xcj.dex
sdk-android/kotlin/: settings.gradle.kts
sdk-android/rust/: Cargo.toml
sdk-android/rust/.cargo/: config.toml
sdk-android/rust/xcj-core/: Cargo.toml  build.rs
sdk-android/rust/xcj-core/src/: anti_debug.rs  cache.rs  card_key.rs  crypto.rs  integrity.rs  jni_bridge.rs  lib.rs  machine_id.rs
(+160 files in other folders)
